bk_ida/gccida/g1/announce_function
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/announce_function/src/diagnostic.c:1545:11: error: use of undeclared identifier 'off_661611'
verbatim( off_661611, v1); 
          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/announce_function/src/obj/diagnostic.o] Error 1
